remove "transaction delete feature" useless in my domain, refactor update balance
